[package]
name = "shellmound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
reqwest = {version= "0.11.23", features = ["blocking", "json"]}
sea-orm = {version="0.12.10", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros"]}
sea-orm-migration = "^0.12.0"
serde = {version="1.0.195", features=["derive"]}
serde_json = "1.0.111"
