[package]
name = "shellmound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
chrono = "0.4.31"
clap = "4.4.16"
colored = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.30"
gdk-pixbuf = "0.18.5"
#gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gdk-pixbuf" }
glib = "0.18.5"
gtk4 = "0.7.3"
log = "0.4.21"
plotters = "0.3.5"
polars = {version="0.38.1", features=["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"]}
pyo3 = {version="0.20.2", features=["auto-initialize"]}
reqwest = {version= "0.11.23", features = ["blocking", "json"]}
sea-orm = {version="0.12.10", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros"]}
sea-orm-migration = "^0.12.0"
serde = {version="1.0.195", features=["derive"]}
serde_json = "1.0.111"
simplelog = "0.12.1"
tokio = {version="1.35.1", features=["full"]}
